[project]
name = "pyaqsapi"
requires-python = ">=3.10"
version = "1.0.2"
keywords = ["environmental monitoring", "Air Quality System datamart", "air monitoring", "Clean Air Act", "ambient air quality", "air quality data", "AQS", "EPA"]
# dynamic = ["version"]
description = "United States Environmental Protection Agency (US EPA) Air Quality System (AQS) Data Mart API v2 interface."
authors = [
  {name = "Clinton Mccrowey", email = "mccrowey.clinton@epa.gov"},
]
maintainers = [
  {name = "Clinton Mccrowey", email = "mccrowey.clinton@epa.gov"}
]
readme = "README.rst"
license = "MIT"
license-files = ["LICENSE.rst"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Operating System :: OS Independent"
]
dependencies = [
  "certifi",
  "cryptography",
  "keyring",
  "pandas",
  "ratelimit",
  "requests"
]

[project.optional-dependencies]
doc = [
  "numpydoc",
  "sphinx",
  "sphinx-rtd-theme",
  "sphinxcontrib-bibtex"
]

test = [
  "pytest",
  "pytest-cov",
  "pytest-rerunfailures",
  "pytest-ruff",
  "pytest-sugar"
]

dev = [
    "bandit",
    "conda-build",
    "mypy",
    "pylint",
    "ruff",
    "tox"
    ]

[project.urls]
"Homepage" = "https://github.com/USEPA/pyaqsapi"
"Package on pypi.org" = "https://pypi.org/project/pyaqsapi/"
"AQS" = "https://www.epa.gov/aqs"
"AQS DataMart" = "https://aqs.epa.gov/aqsweb/documents/data_mart_welcome.html"
"AQS Data Mart API" = "https://aqs.epa.gov/aqsweb/documents/data_api.html"
"pyaqsapi API Documentation" = "https://usepa.github.io/pyaqsapi/"
"SOURCE" = "https://github.com/USEPA/pyaqsapi.git"
"RAQSAPI" = "https://github.com/USEPA/RAQSAPI"
"Issue Tracker" = "https://github.com/USEPA/pyaqsapi/issues"

[build-system]
  requires = ["setuptools >= 77.0.3", "build"]
  build-backend = "setuptools.build_meta"

[tool.bandit]
exclude_dirs = [".tox",
                "dev",
                "tests",
                "pycache",
                "pyaqsapi/bysite/tests",
                "pyaqsapi/bycounty/tests",
                "pyaqsapi/bystate/tests",
                "pyaqsapi/byMA/tests",
                "pyaqsapi/bypqao/tests",
                "pyaqsapi/bybox/tests",
                "pyaqsapi/bycbsa/tests"]

[tool.black]
line-length = 125
target-version = ['py310', 'py311', 'py312', 'py313']
exclude = '''
/(
    \.git
  | _build
  | build
  | dist
  | .tox
)/
'''

[tool.ruff]
respect-gitignore = true
show-fixes = true
line-length = 125
extend-exclude = [
    ".spyproject",
    ".github",
    ".vscode",
    "*tests/*",
    "dev/*"
]

[tool.ruff.lint]
fixable = ["ALL"]
ignore = ["D404", "C901"]
select = [
  "C901",
  "D100",
  "D402",
  "D403",
  "D406",
  "D407",
  "D408",
  "D409",
  "D414",
  "D415",
  "D417",
  "D419",
  "E101",
  "I001",
  "I002"]
extend-select = ["UP", "I", "E", "W"]
unfixable = []


[tool.ruff.analyze]
direction = "dependencies"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = "dynamic"
line-ending = "lf"
nested-string-quote-style= "alternating"
skip-magic-trailing-comma = false

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.setuptools]
packages = ["pyaqsapi",
            "pyaqsapi.bysite",
            "pyaqsapi.bycounty",
            "pyaqsapi.bystate",
            "pyaqsapi.bycbsa",
            "pyaqsapi.bypqao",
            "pyaqsapi.byma",
            "pyaqsapi.bybox"]

[tool.setuptools.package-data]
pyaqsapi = ["py.typed", "*.pyi"]

[tool.mypy]
follow_imports = "skip"
ignore_missing_imports = true
disable_error_code = ['import-untyped']
exclude_gitignore = true
namespace_packages = true
color_output = true
explicit_package_bases = true
exclude = [
  '(^|[\\/])tests([\\/]|$)',
  '(^|[\\/])dev([\\/]|$)',
  '(^|[\\/])test_.*\\.py$'
]

[tool.prospector]
max-line-length = 125
run = [
    "ruff",
    "pyflakes",
    "mypy",
    "pyroma",
    "vulture",
    "bandit",
]
ignore-patterns = [
    "build/",
    "docs/",
    ".devcontainer",
    ".git",
    ".github",
    ".ruff_cache",
    ".spyproject",
    ".tox",
    ".vscode",
    "codeql-custom-queries-python",
    "dev",
    "dist",
    "docs/_build",
    "pyaqsapi.egg-info"
]

[tool.sphinx-linter]
#requires python tomllib which is only available in python 3.11 and above,
#so this tool is not listed in dev dependencies
ignore = [".tox", "build", "dist", "dev"]
max-line-length = 125
