[metadata]
name: pyAQSAPI
version = 1.0-beta
author = Clinton Mccrowey
author_email = mccrowey.clinton@epa.gov
description = Retrieve air monitoring data and associated metadata from the US Environmental Protection Agency's Air Quality System Data Mart API service using functions. See <https://aqs.epa.gov/aqsweb/documents/data_api.html> for details about the US EPA Data Mart API.
long_description =
url = NA
project_urls =
    pyaqsapi = "https://github.com/USEPA/pyaqsapi"
	AQS = https://www.epa.gov/aqs
	AQS Data Mart = https://aqs.epa.gov/aqsweb/documents/data_mart_welcome.html
	SOURCE = https://github.com/USEPA/pyaqsapi
	RAQSAPI = https://github.com/USEPA/RAQSAPI
	Bug Tracker = https://github.com/USEPA/pyaqsapi/issues
classifiers =
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
packages = find:
python_requires >= 3.7

[options.packages.find]
where = pyaqsapi

[coverage:run]
branch = True

[coverage:report]
show_missing = True
skip_covered = True
skip_empty = True

[coverage:html]
directory = tests\coverage_report

[options.extras_require]
docs =
  sphinx
  sphinxcontrib-napoleon
  sphinxcontrib-apidoc
  sphinxcontrib-spelling
  sphinx_rtd_theme